--- a/html/src/index.html
+++ b/html/src/index.html
@@ -72,39 +72,41 @@ function abort() {
 }
 abortButton.addEventListener("click", () => abort());
 
-function progress(loaded, total, last) {
-    let now = window.performance.now();
-    if (last.size !== loaded) {
-        let speed = (loaded - last.size) / (now - last.time) / 1000; // megabytes per second
-        speedOutput.innerText = Math.round(speed * 100) / 100 + " megabytes per second";
-        speedOutput2.innerText = Math.round(speed * 8 * 100) / 100 + " megabits per second";
-    }
-    progressBar.style.width = loaded / total * 100 + "%";
-    return {
-        time: now,
-        size: loaded
-    };
+function progress(transferred, total, start, now) {
+    let speed = (transferred / 1000000) / ((now - start) / 1000); // megabytes per second
+    speedOutput.innerText = Math.round(speed * 100) / 100 + " megabytes per second";
+    speedOutput2.innerText = Math.round(speed * 8 * 100) / 100 + " megabits per second";
+    progressBar.style.width = size / total * 100 + "%";
+    return now;
 }
-function transfer(upload, size, count, last) {
+async function transfer(upload, size, count) {
     abort();
-    request = new XMLHttpRequest();
-    if (upload) {
-        request.open("POST", "http://localhost:8080");
-        let buffer = new ArrayBuffer(size);
-        request.send(buffer);
-    } else {
-        request.open("GET", "http://localhost:8080/" + size);
-        request.send();
+    let transferred = 0;
+    let start = window.performance.now();
+    for (let i = 0; i < count; i++) {
+        request = new XMLHttpRequest();
+        if (upload) {
+            request.open("POST", "http://localhost:8080");
+            let buffer = new ArrayBuffer(size);
+            request.send(buffer);
+        } else {
+            request.open("GET", "http://localhost:8080/" + size);
+            request.send();
+        }
+        request.addEventListener("progress", (e) => {
+            progress(transferred + e.loaded, size * count, start, window.performance.now());
+        });
+        request.addEventListener("load", (e) => {
+            progress(transferred + e.loaded, size * count, start, window.performance.now());
+            transferred = transferred + e.total;
+        });
+        await new Promise((resolve) => {
+            request.addEventListener("load", () => resolve())
+        });
     }
-    request.addEventListener("progress", (e) => { last = progress(e.loaded, e.total, last); });
-    request.addEventListener("load", (e) => {
-        last = progress(e.loaded, e.total, last);
-        count = count - 1;
-        if (count > 0) { transfer(upload, size, count, last); }
-    });
 }
 function beginTransfer(upload) {
-    transfer(upload, size, count, { time: window.performance.now(), size: 0 })
+    transfer(upload, size, count)
 }
 uploadButton.addEventListener("click", () => beginTransfer(true));
 downloadButton.addEventListener("click", () => beginTransfer(false));
